fixing bar spacing
i did it 10 but feel free to change it to whatever u think works best

--- a/src/components/assets/barcode_visualization/barcode.css
+++ b/src/components/assets/barcode_visualization/barcode.css
@@ -46,3 +46,8 @@
   stroke: black;
   overflow: visible;
 }
+
+
+td{
+  min-width: 10px;
+}
